--- a/src/app/modules/formation/components/list-formation/list-formation.component.html
+++ b/src/app/modules/formation/components/list-formation/list-formation.component.html
@@ -1,36 +1,42 @@
-<div class="container-fluid p-3 mt-5">
-    <div class="container">
-        <div class="card mb-3 mt-2" *ngFor="let t of themes$ | async">
-            <h2 class="card-header">{{ t.nom }}</h2>
-            <div class="card-body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, numquam. Architecto reiciendis voluptatibus error dolorem nobis minima reprehenderit, officiis possimus delectus fuga natus, maxime ex magnam quos, unde debitis. Dolor?</p>
-                <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0, ngb-panel-1, ngb-panel-2, ngb-panel-3" *ngFor="let s of sthemes$ | async" class="mb-3">
-                    <ng-container *ngIf="t.idTheme==s.theme.idTheme">
-                        <ngb-panel [title]="s.nom">
-                            <ng-template ngbPanelContent>
-                                <table class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">Code</th>
-                                            <th scope="col">Nom</th>
-                                            <th scope="col">Description</th>
-                                            <th scope="col">Nbre Jours</th>
-                                            <th></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody *ngFor="let f of formation$ |async">
-                                        <tr *ngIf="f.stheme.idStheme==s.idStheme">
-                                            <th scope="row">{{ f.codeFormation }}</th>
-                                            <td> {{ f.nom }}</td>
-                                            <td>{{ f.description }}</td>
-                                            <td><span class="badge bg-primary rounded-pill fs-5">{{ f.nbreJrs| number }}</span></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </ng-template>
-                        </ngb-panel>
-                    </ng-container>
-                </ngb-accordion>
+<div class="container-fluid p-3">
+    <div class="row justify-content-center h-100 list">
+        <div class="container w-100">
+            <div class="card mb-5 mt-3" *ngFor="let t of themes$ | async">
+                <h2 class="card-header">{{ t.nom }}</h2>
+                <div class="card-body">
+                    <p class="fs-4">{{ t.description }}</p>
+                    <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0, ngb-panel-1, ngb-panel-2, ngb-panel-3" *ngFor="let s of sthemes$ | async" class="mb-3">
+                        <ng-container *ngIf="t.idTheme==s.theme.idTheme">
+                            <ngb-panel>
+                                <ng-template ngbPanelTitle>
+                                    <span>&#9733; <b class="fs-4">{{s.nom}}</b></span>
+                                  </ng-template>
+                                <ng-template ngbPanelContent>
+                                    <table class="table table-striped table-hover fs-5">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">Code</th>
+                                                <th scope="col">Nom</th>
+                                                <th scope="col">Description</th>
+                                                <th scope="col">Nbre Jours</th>
+                                                <th></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody *ngFor="let f of formation$ |async">
+                                            <tr *ngIf="f.stheme.idStheme==s.idStheme">
+                                                <th scope="row" class="align-middle"><a href="">{{ f.codeFormation }}</a></th>
+                                                <td class="align-middle"> {{ f.nom }}</td>
+                                                <td class="align-middle">{{ f.description }}</td>
+                                                <td class="align-middle"><span class="badge bg-primary rounded-pill fs-5">{{ f.nbreJrs| number }}</span></td>
+                                                <td class="align-middle"><button class="btn btn-success">S'inscrire</button></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </ng-template>
+                            </ngb-panel>
+                        </ng-container>
+                    </ngb-accordion>
+                </div>
             </div>
         </div>
     </div>
