--- a/src/app/modules/formation/components/detail-formation/detail-formation.component.html
+++ b/src/app/modules/formation/components/detail-formation/detail-formation.component.html
@@ -1,25 +1,27 @@
-<div class="container">
-    <div class="card mb-3" >
-        <div class="row ">
-            <div class="col-md-3 p-0">
-                <img src="../../../../../assets/img/hero_1.jpg" class="img w-100 rounded-start ms-2" alt="...">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+<div class="container-fluid p-3">
+    <div class="container">
+        <div class="card mb-3" >
+            <div class="row ">
+                <div class="col-md-3 p-0">
+                    <img src="../../../../../assets/img/hero_1.jpg" class="img w-100 rounded-start ms-4 mt-3 me-5" alt="...">
+                </div>
+                <div class="col-md-8 ms-3 position-relative">
+                    <div class="card-body">
+                    <h5 class="card-title">Formation</h5>
+                    <p class="card-text position-absolute bottom-0 start-20  mb-3"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="row ">
-            <div class="ms-5 me-5 mt-5 mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control w-70" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-              <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
+            <div class="row ">
+                <div class="ms-5 me-5 mt-5 mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                    <input type="email" class="form-control w-70" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </div>
         </div>
     </div>
 </div>
