--- a/src/app/modules/formation/components/list-formation/list-formation.component.scss
+++ b/src/app/modules/formation/components/list-formation/list-formation.component.scss
@@ -1,6 +1,6 @@
 .container-fluid{
     background: url(../../../../../assets/img/background-list.jpg) no-repeat center;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .card-header{
