--- a/src/app/modules/formation/components/list-by-theme/list-by-theme.component.html
+++ b/src/app/modules/formation/components/list-by-theme/list-by-theme.component.html
@@ -27,7 +27,7 @@
                         <td *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle">{{ f.nom }}</td>
                         <td *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle">{{ f.description }}</td>
                         <td *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle"><span class="badge bg-primary rounded-pill fs-5">{{ f.nbreJrs| number }}</span></td>
-                        <td class="align-middle"><button class="btn btn-success">S'inscrire</button></td>
+                        <td class="align-middle"><button class="btn btn-success" [routerLink]="'/formation/details/'+f.idFormation">S'inscrire</button></td>
                         </tr>
                         </tbody>
                     </table>
