--- a/src/app/modules/formation/components/list-by-theme/list-by-theme.component.scss
+++ b/src/app/modules/formation/components/list-by-theme/list-by-theme.component.scss
@@ -1,5 +1,6 @@
 .container-fluid{
     background: url(../../../../../assets/img/background-list-form.jpg) no-repeat center;
+    min-height: 100vh;
 }
 
 .list{
