--- a/src/app/modules/formation/components/list-formation/list-formation.component.html
+++ b/src/app/modules/formation/components/list-formation/list-formation.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid p-3">
-    <div class="row justify-content-center h-100 list">
+<div class="container-fluid p-3 ">
+    <div class="row justify-content-center list">
         <div class="container w-100">
             <div class="card mb-5 mt-3" *ngFor="let t of themes$ | async">
                 <h2 class="card-header">{{ t.nom }}</h2>
@@ -28,7 +28,7 @@
                                                 <td class="align-middle"> {{ f.nom }}</td>
                                                 <td class="align-middle">{{ f.description }}</td>
                                                 <td class="align-middle"><span class="badge bg-primary rounded-pill fs-5">{{ f.nbreJrs| number }}</span></td>
-                                                <td class="align-middle"><button class="btn btn-success">S'inscrire</button></td>
+                                                <td class="align-middle"><button class="btn btn-success" [routerLink]="'/formation/details/'+f.idFormation">S'inscrire</button></td>
                                             </tr>
                                         </tbody>
                                     </table>
