--- a/src/app/modules/core/components/items-list/items-list.component.html
+++ b/src/app/modules/core/components/items-list/items-list.component.html
@@ -10,7 +10,7 @@
                   <div class="card-body">
                     <h4 class="card-title  mb-3">{{ f.stheme.nom }}</h4>
                     <p class="card-text  mb-4 fs-5 h-10">{{ f.nom }}</p>
-                    <a class="btn btn-success position-absolute bottom-0 start-50 translate-middle-x mb-3" [routerLink]="'/formation/details/'+f.idFormation">Button</a>
+                    <a class="btn btn-primary position-absolute bottom-0 start-50 translate-middle-x mb-3" [routerLink]="'/formation/details/'+f.idFormation">Voir plus</a>
                   </div>
                 </div>
               </div>
