--- a/src/app/modules/formation/components/list-formation/list-formation.component.scss
+++ b/src/app/modules/formation/components/list-formation/list-formation.component.scss
@@ -1,5 +1,6 @@
 .container-fluid{
     background: url(../../../../../assets/img/background-list.jpg) no-repeat center;
+    background-size: cover;
     min-height: 100vh;
 }
 
