--- a/src/app/modules/formation/components/detail-formation/detail-formation.component.html
+++ b/src/app/modules/formation/components/detail-formation/detail-formation.component.html
@@ -1,25 +1,73 @@
 <div class="container-fluid p-3">
-    <div class="container">
-        <div class="card mb-3" >
+    <div class="container mt-4">
+        <div class="card mb-3" *ngIf=" formation$|async as f ">
             <div class="row ">
                 <div class="col-md-3 p-0">
                     <img src="../../../../../assets/img/hero_1.jpg" class="img w-100 rounded-start ms-4 mt-3 me-5" alt="...">
                 </div>
                 <div class="col-md-8 ms-3 position-relative">
                     <div class="card-body">
-                    <h5 class="card-title">Formation</h5>
-                    <p class="card-text position-absolute bottom-0 start-20  mb-3"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h4 class="card-title">{{ f.codeFormation}}</h4>
+                    <h4 class="card-title">{{ f.nom }}</h4>
+                    <button class="fst-italic badge btn-success text-wrap p-2 fs-6 mt-3 position-absolute bottom-10 end-0 me-5">&#9733; <b>S'inscrire</b></button>
+                    <p class="card-text position-absolute bottom-0 start-20  mb-1"><small class="fst-italic badge bg-primary text-wrap p-2 ">Durée : {{ f.nbreJrs }} Jours</small></p>
                     </div>
                 </div>
             </div>
-            <div class="row ">
-                <div class="ms-5 me-5 mt-5 mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                    <input type="email" class="form-control w-70" id="exampleFormControlInput1" placeholder="name@example.com">
+            <div class="row d-flex justify-content-center mt-5 mb-5">
+                <div class="col-md-10 me-5 mb-4">
+                    <ngb-accordion  [closeOthers]="true" activeIds="static-1, static-2, static-3">
+                        <ngb-panel id="static-1">
+                            <ng-template ngbPanelTitle>
+                                <span><b>Présentation</b></span>
+                            </ng-template>
+                            <ng-template ngbPanelContent>
+                                <p class="mb-2">{{ f.description}}</p>
+                                <p> Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
+                                aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
+                                craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
+                                occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+                                labore sustainable VHS.</p>
+                            </ng-template>
+                          </ngb-panel>
+                    </ngb-accordion>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <div class="col-md-5 me-5">
+                    <ngb-accordion [closeOthers]="true" activeIds="static-2">
+                        <ngb-panel id="static-2">
+                            <ng-template ngbPanelTitle>
+                                <span><b>Objectifs</b></span>
+                            </ng-template>
+                            <ng-template ngbPanelContent>
+                                <p class="mb-2">{{ f.description}}</p>
+                                <p> Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
+                                aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
+                                craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
+                                occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+                                labore sustainable VHS.</p>
+                            </ng-template>
+                          </ngb-panel>
+                    </ngb-accordion>
+                </div>
+                <div class="col-md-5">
+                    <ngb-accordion #acc="ngbAccordion" activeIds="static-3">
+                        <ngb-panel id="static-3">
+                            <ng-template ngbPanelTitle>
+                                <span><b>Programme</b></span>
+                            </ng-template>
+                            <ng-template ngbPanelContent>
+                                <p class="mb-2">{{ f.description}}</p>
+                                <p> Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia
+                                aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor,
+                                sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
+                                craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings
+                                occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+                                labore sustainable VHS.</p>
+                            </ng-template>
+                          </ngb-panel>
+                    </ngb-accordion>
                 </div>
             </div>
         </div>
