--- a/src/app/modules/formation/components/list-by-theme/list-by-theme.component.html
+++ b/src/app/modules/formation/components/list-by-theme/list-by-theme.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-3">
+<div class="container-fluid p-3 bg-image">
     <div class="row justify-content-center h-100 list">
         <div class="container mt-5">
             <div class="accordion mb-5" id="accordionPanelsStayOpenExample" *ngFor="let s of sthemes$ | async">
@@ -23,10 +23,10 @@
                         </thead>
                         <tbody>
                         <tr *ngFor="let f of formation$ |async">
-                        <th scope="row" *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle"><a href="">{{ f.codeFormation }}</a></th>
+                        <th scope="row" *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle"><a [routerLink]="'/formation/details/'+f.idFormation">{{ f.codeFormation }}</a></th>
                         <td *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle">{{ f.nom }}</td>
                         <td *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle">{{ f.description }}</td>
-                        <td *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle"><span class="badge bg-primary rounded-pill fs-5">{{ f.nbreJrs| number }}</span></td>
+                        <td *ngIf="f.stheme.idStheme==s.idStheme" class="align-middle"><span class="badge bg-primary rounded-pill fs-6">{{ f.nbreJrs| number }}</span></td>
                         <td class="align-middle"><button class="btn btn-success" [routerLink]="'/formation/details/'+f.idFormation">S'inscrire</button></td>
                         </tr>
                         </tbody>
