--- a/src/app/modules/formation/components/detail-formation/detail-formation.component.scss
+++ b/src/app/modules/formation/components/detail-formation/detail-formation.component.scss
@@ -1,4 +1,14 @@
 .container-fluid{
     background: url(../../../../../assets/img/background-list-form.jpg) no-repeat center;
+    background-size: cover;
     min-height: 100vh;
+}
+
+.card{
+    min-height: 95vh;
+    height: 95vh;
+}
+
+.titre{
+    min-height: 23%;
 }
