--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,37 +1,45 @@
-
-<section class="home_banner_area p-3 m-3 w-100">
-    <div class="banner_inner mt-5 w-100">
-      <div class="w-100">
-        <div class="row w-100">
-          <div class="col-lg-12 w-100">
-            <div class="banner_content text-center w-100">
-              <p class="text-uppercase">
-                Best online education service In the world
-              </p>
-              <h2 class="text-uppercase mt-4 mb-5">
-                One Step Ahead This Season
-              </h2>
-                <ngb-carousel #carousel [interval]="5000" [pauseOnHover]="true" [pauseOnFocus]="false" (slide)="onSlide($event)" >
-                    <ng-template ngbSlide *ngFor="let img of images; index as i" class="">
-                    <div class="carousel-caption d-none d-md-block mb-5">
-                      <h1>Second slide label</h1>
-                      <p>{{(i+1==1)? "OK":"NOK"}}</p>
-                    </div>
-                    <a href="#" target="_blank" rel="nofollow noopener noreferrer">
-                        <div class="picsum-img-wrapper ">
-                        <img [src]="img" alt="My image {{i + 1}} description" class=" w-100" >
-                        </div>
-                    </a>
-                    </ng-template>
-                </ngb-carousel>
-                <h2 class="text-uppercase mt-5 mb-4 fst-italic badge bg-primary text-wrap p-3">
-                OUR POPULAR COURSES
+<div class="container-fluid full">
+  <div class="container-fluid w-100">
+      <div class="mt-3 w-100">
+        <div class="w-100">
+          <div class="row w-100 g-5">
+            <div class="col-md-12 w-100 ">
+              <div class="row text-center own-title fs-1 mb-4 text-white g-5">
+                <span>BIENVENUE SUR ... IT TRAINING</span>
+              </div>
+              <div class="text-center w-100 mt-5">
+                <p class="text-uppercase own-title fs-3 text-white">
+                  Meilleur centre de formation de France.
+                </p>
+                <h2 class="text-uppercase mt-2 mb-5 own-title fs-5 text-white">
+                  Ayez une longeur d'avance sur les autres avec des formations de qualité et ultra personnalisées
                 </h2>
-                <app-items-list [$formations] ="$formations"></app-items-list>
-            </div>
-            </div>
+                <div class="row g-3 d-flex justify-content-center mb-5">
+                  <div class="col-md-12">
+                    <ngb-carousel #carousel [interval]="5000" [pauseOnHover]="true" [pauseOnFocus]="false" (slide)="onSlide($event)" >
+                        <ng-template ngbSlide *ngFor="let img of images; index as i">
+                        <div class="carousel-caption d-none d-md-block mb-5 own-title">
+                          <h1>{{(i+1==1)? "Formations ultra personnalisées":"Des formations en Distanciel / Présentiel / Mixtes "}}</h1>
+                        </div>
+                        <a href="#" target="_blank" rel="nofollow noopener noreferrer">
+                            <div class="picsum-img-wrapper ">
+                            <img [src]="img" alt="My image {{i + 1}} description" class=" w-100" >
+                            </div>
+                        </a>
+                        </ng-template>
+                    </ngb-carousel>
+                  </div>
+
+                <div class="mb-5 ">
+                  <h1 class="text-uppercase mt-5 mb-4 fst-italic badge bg-primary text-wrap p-3 fs-5">
+                  OUR POPULAR COURSES
+                  </h1>
+                    <app-items-list [formations$] ="formations$"></app-items-list>
+                </div>
+             </div>
+           </div>
           </div>
         </div>
+    
       </div>
-  
-  </section>
+</div>
