--- a/src/app/modules/core/components/items-list/items-list.component.html
+++ b/src/app/modules/core/components/items-list/items-list.component.html
@@ -1,20 +1,22 @@
-<div class="container my-2">
-  <ngb-carousel >
-    <ng-template ngbSlide *ngFor="let form of $formations | async index as i">
-          <div class="row">
-            <ng-container *ngFor="let f of $formations | async index as j">
-              <div class="col-md-4 mb-3" *ngIf="j<3">
-                <div class="card mb-4 mw-100 h-100 d-inline-block position-relative">
-                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(34).jpg"
-                      alt="Card image cap">
-                  <div class="card-body">
-                    <h4 class="card-title  mb-3">{{ f.stheme.nom }}</h4>
-                    <p class="card-text  mb-4 fs-5 h-10">{{ f.nom }}</p>
-                    <a class="btn btn-primary position-absolute bottom-0 start-50 translate-middle-x mb-3" [routerLink]="'/formation/details/'+f.idFormation">Voir plus</a>
+<div class="container">
+  <ngb-carousel *ngIf="tab.length>1">
+    <ng-template ngbSlide *ngFor="let f1 of tab index as i">
+            <div class="row car">
+              <div class="col-md-4 m-0 mb-4" *ngFor="let f of f1 index as j">
+                  <div class="card w-100 h-100 d-inline-block position-relative">
+                    <div class="row h-50">
+                      <img class="card-img-top h-100" [src]="'../../../../../assets/img/formations/'+f.codeFormation+'.jpg'"
+                      onerror="this.src='https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(34).jpg'" alt="Card image cap">
+                    </div>
+                    <div class="card-body border-top border-dark border-2">
+                      <span class="fs-5 badge bg-dark position-absolute bottom-50 start-0 p-2">{{ f.nbreJrs | number }} {{ f.nbreJrs > 1? 'Jours':'Jour' }} </span>
+                      <h4 class="card-title  mb-3">{{ f.stheme.nom }}</h4>
+                      <p class="card-text  mb-4 fs-6 h-10">{{ f.nom }}</p>
+                      <button class="btn-sm btn-primary position-absolute bottom-0 start-50 translate-middle-x mb-2 mt_5" [routerLink]="'/formation/details/'+f.idFormation">En savoir plus ...</button>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </ng-container>
-        </div> 
+            </div> 
     </ng-template>     
   </ngb-carousel>
+</div>
