--- a/src/app/modules/formation/components/gestion-formation/gestion-formation.component.scss
+++ b/src/app/modules/formation/components/gestion-formation/gestion-formation.component.scss
@@ -1,5 +1,6 @@
 .full{
-    background: url(../../../../../assets/img/background-create.jpg) no-repeat center;
+    background: url(../../../../../assets/img/background-list-form.jpg) no-repeat center;
     background-size: cover;
     min-height: 100vh;
+    padding: 0;
 }
