--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,40 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+
+.invalid-feedback {
+    display: block;
+}
+
+body{
+    //font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+    font-family: 'Joan', serif;
+    background: url(./assets/img/site-bg.jpg) no-repeat center;
+    background-size: cover;
+    min-height: 100vh;
+    padding: 0px;
+    font-weight: 900
+}
+
+.own-title{
+    //font-family: 'Monoton', cursive;
+    font-family: 'Trade Winds', cursive;
+    font-weight: 600
+}
+
+.own-text{
+    font-family: 'Open Sans', sans-serif;
+}
+.nb{
+    width: 10%;
+    text-align: center;
+}
+/*.banner{
+    font-family: 'Joan', serif;
+    background: url(./assets/img/banner.jpg) no-repeat center;
+    background-size: cover;
+    height: 10vh;
+    color: #0275d8;
+    align-items: center;
+}*/
