suppression du fond d'écran de l'accueil

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,8 +11,8 @@
 body{
     //font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
     font-family: 'Joan', serif;
-    background: url(./assets/img/site-bg.jpg) no-repeat center;
-    background-size: cover;
+    //background: url(./assets/img/site-bg.jpg) no-repeat center;
+    //background-size: cover;
     min-height: 100vh;
     padding: 0px;
     font-weight: 900
