--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,3 +39,12 @@ body{
     color: #0275d8;
     align-items: center;
 }*/
+
+.full{
+    background: url(./assets/img/background-list-form.jpg) no-repeat center;
+    background-size: cover;
+    min-height: 100vh;
+    padding: 0;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
