--- a/src/app/components/accueil/accueil.component.html
+++ b/src/app/components/accueil/accueil.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid full">
+<div class="container-fluid">
   <div class="container-fluid w-100">
       <div class="mt-3 w-100">
         <div class="w-100">
@@ -11,7 +11,7 @@
                 <p class="text-uppercase own-title fs-3 text-white">
                   Meilleur centre de formation de France.
                 </p>
-                <h2 class="text-uppercase mt-2 mb-5 own-title fs-5 text-white">
+                <h2 class="text-uppercase mt-2 mb-5 own-title fs-6 text-white">
                   Ayez une longeur d'avance sur les autres avec des formations de qualité et ultra personnalisées
                 </h2>
                 <div class="row g-3 d-flex justify-content-center mb-5">
