add user module andcomponent

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -51,6 +51,8 @@
                   <li><a class="dropdown-item "  [routerLink]="'/formation/gestion/catalogue'">Gestion du catalogue</a></li>
                   <li><a class="dropdown-item" href="#">Gestion de la planification</a></li>
                   <li><a class="dropdown-item" href="#">Gestion de la logistique</a></li>
+                  <li><a class="dropdown-item" href="/utilisateurs">Utilisateur</a> </li>
+                 
                 </ul>
             </li>
           </ul>
