add functionnalities for session

--- a/src/app/modules/salle/components/gestion-salle/gestion-salle.component.html
+++ b/src/app/modules/salle/components/gestion-salle/gestion-salle.component.html
@@ -117,7 +117,7 @@
                                     <td class="align-middle">{{ s.statut }}</td>
                                     <td class="align-middle"><button class="btn btn-danger btn-sm"
                                         appConfirm
-                                        [confirmMessage]="'Voulez-vous réellement supprimer cette formation ?'"
+                                        [confirmMessage]="'Voulez-vous réellement supprimer cette salle ?'"
                                         (confirmClick)="deleteSalle(s.idSalle)">Supprimer</button></td>
                                 </tr>
                             </tbody>
