--- a/src/app/modules/dashboard/components/dashboard-logistique/dashboard-logistique.component.html
+++ b/src/app/modules/dashboard/components/dashboard-logistique/dashboard-logistique.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid full mt-5">
+<div class="container-fluid full">
     <p>date du jour : {{currentDate | date:'dd-MM-yyyy'}}</p>
     
     <p>choississez une formation</p>
